--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "moment": "~2.0.0",
-    "url": "~0.7.9"
+    "url": "~0.7.9",
+    "express": "~3.3.3",
+    "jade": "~0.32.0",
+    "underscore": "~1.5.0"
   }
 }
