--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "~0.7.9",
     "express": "~3.3.3",
     "jade": "~0.32.0",
-    "underscore": "~1.5.0"
+    "underscore": "~1.5.0",
+    "mongoose": "~3.6.14"
   }
 }
