--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "~3.3.3",
     "jade": "~0.32.0",
     "underscore": "~1.5.0",
-    "mongoose": "~3.6.14"
+    "mongoose": "~3.6.14",
+    "debug": "~0.7.2"
   }
 }
